--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.13)
 project(hash_server)
 set(CMAKE_CXX_STANDARD 20)
 
-add_library(hash_server_lib STATIC src/HashServer.cpp src/ServerContextPool.cpp src/HashConnection.cpp)
+add_library(hash_server_lib STATIC src/HashServer.cpp src/ServerContextPool.cpp src/HashConnection.cpp src/MessageParser.cpp)
 target_include_directories(hash_server_lib PUBLIC inc)
 
 add_executable(hash_server src/main.cpp)
