--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,4 +12,4 @@ target_link_libraries(hash_server hash_server_lib crypto pthread)
 
 add_executable(hash_tests test/hash_tests.cpp)
 target_include_directories(hash_tests PRIVATE inc)
-target_link_libraries(hash_tests hash_server_lib gtest crypto)
+target_link_libraries(hash_tests hash_server_lib gtest crypto pthread)
